infra/terraform/04-bastion-host/00-security/main.tf
data "aws_ec2_managed_prefix_list" "cloudfront" {
  name = "com.amazonaws.global.cloudfront.origin-facing"
}

# ------------------------------------------------------------------------------
# Bastion Security Group
# ------------------------------------------------------------------------------

resource "aws_security_group" "bastion_sg" {
  name        = "bastion-sg"
  description = "Security group for Bastion Host"
  vpc_id      = data.terraform_remote_state.networking.outputs.vpc_id

  tags = merge(var.common_tags, {
    Name = "bastion-sg"
  })
}

resource "aws_security_group_rule" "ingress_ssh" {
  type              = "ingress"
  description       = "SSH from allowed IPs"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = var.allowed_ssh_cidr_blocks
  security_group_id = aws_security_group.bastion_sg.id
}

resource "aws_security_group_rule" "egress_ssh_vpc" {
  type              = "egress"
  description       = "SSH to other instances in VPC"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = [data.terraform_remote_state.networking.outputs.vpc_cidr]
  security_group_id = aws_security_group.bastion_sg.id
}

resource "aws_security_group_rule" "ingress_https_cloudfront" {
  type              = "ingress"
  description       = "Allow CloudFront Origin Traffic for landing (HTTPS 443)"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  prefix_list_ids   = [data.aws_ec2_managed_prefix_list.cloudfront.id]
  security_group_id = aws_security_group.bastion_sg.id
}

resource "aws_security_group_rule" "ingress_https_8443_cloudfront" {
  type              = "ingress"
  description       = "Allow CloudFront Origin Traffic for academy (HTTPS 8443)"
  from_port         = 8443
  to_port           = 8443
  protocol          = "tcp"
  prefix_list_ids   = [data.aws_ec2_managed_prefix_list.cloudfront.id]
  security_group_id = aws_security_group.bastion_sg.id
}

resource "aws_security_group_rule" "egress_http" {
  type              = "egress"
  description       = "HTTP for package updates (yum/dnf)"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.bastion_sg.id
}

resource "aws_security_group_rule" "egress_https" {
  type              = "egress"
  description       = "HTTPS for AWS services (ECR, SSM, etc.)"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.bastion_sg.id
}
